--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       position: absolute;
       top: -100%;
       right: 0;
-      background-color: rgba(0, 0, 0, 0.8); /* Transparent background */
+      background-color: rgba(255, 255, 255, 0.9); /* Transparent white background */
       width: 100%;
       height: 100vh;
       flex-direction: column;
@@ -97,16 +97,16 @@
       padding: 10px 0;
       opacity: 0;
       visibility: hidden;
-      transition: top 0.7s ease-out, opacity 0.7s ease, visibility 0.7s ease;
+      transition: top 0.8s ease-in-out, opacity 0.8s ease-in-out, visibility 0.8s ease-in-out;
     }
 
     .mobile-nav a {
-      color: white;
+      color: black;
       font-size: 1.5rem;
       font-weight: 600;
       text-decoration: none;
       opacity: 0;
-      transition: opacity 0.7s ease;
+      transition: opacity 0.8s ease-in-out;
     }
 
     .mobile-nav a:hover {
@@ -124,7 +124,7 @@
 
     .mobile-nav.active a {
       opacity: 1;
-      transition-delay: 0.2s;
+      transition-delay: 0.3s;
     }
 
     /* Hide mobile nav and hamburger on desktop */
