--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Jesús Lopez Aguilar - ePortfolio</title>
-  
-  <!-- Embedded CSS -->
+  <link rel="stylesheet" href="styles.css"> <!-- External CSS file -->
   <style>
     * {
       margin: 0;
@@ -67,66 +65,6 @@
       background: #00bcd4;
       text-shadow: 0 0 8px #00bcd4;
       transform: scale(1.1);
-    }
-
-    /* Mobile Menu */
-    .hamburger-menu {
-      display: none;
-      flex-direction: column;
-      cursor: pointer;
-    }
-
-    .hamburger-menu div {
-      width: 25px;
-      height: 3px;
-      margin: 5px;
-      background-color: #000;
-    }
-
-    /* Mobile menu - hidden by default */
-    .mobile-nav {
-      display: none;
-      position: absolute;
-      top: -100%;
-      right: 0;
-      background-color: rgba(255, 255, 255, 0.9); /* Transparent white background */
-      width: 100%;
-      height: 100vh;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      gap: 30px;
-      padding: 10px 0;
-      opacity: 0;
-      visibility: hidden;
-      transition: top 0.8s ease-in-out, opacity 0.8s ease-in-out, visibility 0.8s ease-in-out;
-    }
-
-    .mobile-nav a {
-      color: black;
-      font-size: 1.5rem;
-      font-weight: 600;
-      text-decoration: none;
-      opacity: 0;
-      transition: opacity 0.8s ease-in-out;
-    }
-
-    .mobile-nav a:hover {
-      color: #00bcd4;
-      text-shadow: 0 0 8px #00bcd4;
-      transform: scale(1.1);
-    }
-
-    /* Show mobile nav when active */
-    .mobile-nav.active {
-      top: 0;
-      opacity: 1;
-      visibility: visible;
-    }
-
-    .mobile-nav.active a {
-      opacity: 1;
-      transition-delay: 0.3s;
     }
 
     /* Main content */
@@ -245,7 +183,7 @@
 
   <!-- Footer -->
   <footer>
-    <p>© 2025 Jesús Lopez Aguilar | All rights reserved (theyre not)</p>
+    <p>© 2025 Jesús Lopez Aguilar | All rights reserved</p>
   </footer>
 
   <script>
