--- a/index.html
+++ b/index.html
@@ -67,6 +67,66 @@
       transform: scale(1.1);
     }
 
+    /* Hamburger Menu */
+    .hamburger-menu {
+      display: none;
+      flex-direction: column;
+      cursor: pointer;
+    }
+
+    .hamburger-menu div {
+      width: 25px;
+      height: 3px;
+      margin: 5px;
+      background-color: #000;
+    }
+
+    /* Mobile menu - hidden by default */
+    .mobile-nav {
+      display: none;
+      position: absolute;
+      top: -100%;
+      right: 0;
+      background-color: rgba(255, 255, 255, 0.9); /* Transparent white background */
+      width: 100%;
+      height: 100vh;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      gap: 30px;
+      padding: 10px 0;
+      opacity: 0;
+      visibility: hidden;
+      transition: top 0.8s ease-in-out, opacity 0.8s ease-in-out, visibility 0.8s ease-in-out;
+    }
+
+    .mobile-nav a {
+      color: black;
+      font-size: 1.5rem;
+      font-weight: 600;
+      text-decoration: none;
+      opacity: 0;
+      transition: opacity 0.8s ease-in-out;
+    }
+
+    .mobile-nav a:hover {
+      color: #00bcd4;
+      text-shadow: 0 0 8px #00bcd4;
+      transform: scale(1.1);
+    }
+
+    /* Show mobile nav when active */
+    .mobile-nav.active {
+      top: 0;
+      opacity: 1;
+      visibility: visible;
+    }
+
+    .mobile-nav.active a {
+      opacity: 1;
+      transition-delay: 0.3s;
+    }
+
     /* Main content */
     .name-center {
       min-height: 90vh;
@@ -154,7 +214,6 @@
         font-size: 0.9rem;
       }
     }
-
   </style>
 </head>
 
@@ -162,6 +221,12 @@
   <!-- Navbar -->
   <nav>
     <div class="nav-container">
+      <div class="hamburger-menu" id="hamburger-menu" onclick="toggleMenu()">
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+
       <ul id="nav-links">
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About Me</a></li>
@@ -183,7 +248,7 @@
 
   <!-- Footer -->
   <footer>
-    <p>© 2025 Jesús Lopez Aguilar | All rights reserved</p>
+    <p>© 2025 Jesús Lopez Aguilar | All rights reserved (im lying)</p>
   </footer>
 
   <script>
