--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Jesús Lopez Aguilar - ePortfolio</title>
-  <link rel="stylesheet" href="styles.css"> <!-- External CSS file -->
   <style>
     * {
       margin: 0;
@@ -18,12 +18,12 @@
       font-family: 'Nunito', sans-serif;
       color: #f0f0f0;
       overflow-x: hidden;
-      scroll-behavior: smooth; /* Smooth scrolling */
+      transition: background-color 0.3s ease;
     }
 
     /* Navbar */
     nav {
-      background-color: #fff;
+      background-color: white;
       padding: 10px 0;
       width: 100%;
       position: fixed;
@@ -35,12 +35,13 @@
       justify-content: center;
       align-items: center;
       box-shadow: 0 2px 8px rgba(0, 0, 0, 0.6);
+      transition: padding 0.3s ease;
     }
 
     #nav-links {
       list-style: none;
       display: flex;
-      gap: 40px;
+      gap: 20px;
       margin: 0;
       padding: 0;
       justify-content: center;
@@ -53,16 +54,14 @@
     #nav-links li a {
       color: black;
       text-decoration: none;
-      font-size: 1.3rem;
-      font-weight: 700;
-      padding: 8px 20px;
-      transition: color 0.3s, text-shadow 0.3s, transform 0.3s, background 0.3s;
-      border-radius: 8px;
+      font-size: 1.2rem;
+      font-weight: 600;
+      padding: 8px 15px;
+      transition: color 0.3s, text-shadow 0.3s, transform 0.3s;
     }
 
     #nav-links li a:hover {
-      color: #fff;
-      background: #00bcd4;
+      color: #00bcd4;
       text-shadow: 0 0 8px #00bcd4;
       transform: scale(1.1);
     }
@@ -72,6 +71,7 @@
       display: none;
       flex-direction: column;
       cursor: pointer;
+      transition: transform 0.3s ease;
     }
 
     .hamburger-menu div {
@@ -79,6 +79,7 @@
       height: 3px;
       margin: 5px;
       background-color: #000;
+      transition: transform 0.3s ease;
     }
 
     /* Mobile menu - hidden by default */
@@ -125,6 +126,19 @@
     .mobile-nav.active a {
       opacity: 1;
       transition-delay: 0.3s;
+    }
+
+    /* Hide mobile nav and hamburger on desktop */
+    @media (min-width: 768px) {
+      .hamburger-menu {
+        display: none;
+      }
+      .mobile-nav {
+        display: none;
+      }
+      #nav-links {
+        display: flex;
+      }
     }
 
     /* Main content */
@@ -237,6 +251,15 @@
     </div>
   </nav>
 
+  <!-- Mobile Menu -->
+  <div class="mobile-nav" id="mobile-nav">
+    <a href="index.html">Home</a>
+    <a href="about.html">About Me</a>
+    <a href="courses.html">Courses</a>
+    <a href="achievements.html">Achievements</a>
+    <a href="projects.html">Personal Projects</a>
+  </div>
+
   <!-- Main Content -->
   <div class="name-center">
     <h1>Welcome to my SLCC ePortfolio: General Education!</h1>
@@ -248,7 +271,7 @@
 
   <!-- Footer -->
   <footer>
-    <p>© 2025 Jesús Lopez Aguilar | All rights reserved (im lying)</p>
+    <p>© 2025 Jesús Lopez Aguilar | All rights reserved</p>
   </footer>
 
   <script>
