--- a/before-we-begin.html
+++ b/before-we-begin.html
@@ -35,7 +35,6 @@
       justify-content: center;
       align-items: center;
       box-shadow: 0 2px 8px rgba(0, 0, 0, 0.6);
-      transition: padding 0.3s ease;
     }
 
     #nav-links {
@@ -64,6 +63,66 @@
       color: #00bcd4;
       text-shadow: 0 0 8px #00bcd4;
       transform: scale(1.1);
+    }
+
+    /* Hamburger Menu */
+    .hamburger-menu {
+      display: none;
+      flex-direction: column;
+      cursor: pointer;
+    }
+
+    .hamburger-menu div {
+      width: 25px;
+      height: 3px;
+      margin: 5px;
+      background-color: #000;
+    }
+
+    /* Mobile menu - hidden by default */
+    .mobile-nav {
+      display: none;
+      position: absolute;
+      top: -100%;
+      right: 0;
+      background-color: rgba(255, 255, 255, 0.9); /* Transparent white background */
+      width: 100%;
+      height: 100vh;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      gap: 30px;
+      padding: 10px 0;
+      opacity: 0;
+      visibility: hidden;
+      transition: top 0.8s ease-in-out, opacity 0.8s ease-in-out, visibility 0.8s ease-in-out;
+    }
+
+    .mobile-nav a {
+      color: black;
+      font-size: 1.5rem;
+      font-weight: 600;
+      text-decoration: none;
+      opacity: 0;
+      transition: opacity 0.8s ease-in-out;
+    }
+
+    .mobile-nav a:hover {
+      color: #00bcd4;
+      text-shadow: 0 0 8px #00bcd4;
+      transform: scale(1.1);
+    }
+
+    /* Show mobile nav when active */
+    .mobile-nav.active {
+      top: 0;
+      opacity: 1;
+      visibility: visible;
+    }
+
+    .mobile-nav.active a {
+      opacity: 1;
+      transition-delay: 0.3s;
     }
 
     /* Main content */
@@ -154,6 +213,12 @@
   <!-- Navbar -->
   <nav>
     <div class="nav-container">
+      <div class="hamburger-menu" id="hamburger-menu" onclick="toggleMenu()">
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+
       <ul id="nav-links">
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About Me</a></li>
@@ -177,6 +242,14 @@
   <footer>
     <p>© 2025 Jesús Lopez Aguilar | All rights reserved</p>
   </footer>
+
+  <script>
+    // Function to toggle the mobile menu
+    function toggleMenu() {
+      const mobileNav = document.getElementById('mobile-nav');
+      mobileNav.classList.toggle('active');
+    }
+  </script>
 </body>
 
 </html>
