--- a/courses.html
+++ b/courses.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Courses - Jesús Lopez Aguilar</title>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap" rel="stylesheet">
+
 
     <style>
         * {
@@ -14,23 +16,35 @@
             box-sizing: border-box;
         }
 
+        /* --- Animation Definition --- */
+        @keyframes fadeInUp {
+            from {
+                opacity: 0;
+                transform: translateY(20px); /* Start slightly lower */
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0); /* End at normal position */
+            }
+        }
+
         body {
             background-color: #1c1c1c;
             font-family: 'Nunito', sans-serif;
             color: #f0f0f0;
             overflow-x: hidden;
-            padding-top: 60px;
+            padding-top: 60px; /* Account for fixed navbar */
         }
 
         /* Navbar */
         nav {
             background-color: white;
-            padding: 10px 20px;
+            padding: 0 20px;
+            height: 60px;
             width: 100%;
             position: fixed;
             top: 0;
             left: 0;
-            right: 0;
             z-index: 1000;
             display: flex;
             justify-content: center;
@@ -44,7 +58,6 @@
             align-items: center;
             width: 100%;
             max-width: 1200px;
-            padding: 0 20px;
         }
 
         #nav-links {
@@ -53,7 +66,6 @@
             gap: 20px;
             margin: 0;
             padding: 0;
-            justify-content: center;
         }
 
         #nav-links li {
@@ -66,7 +78,7 @@
             font-size: 1.2rem;
             font-weight: 600;
             padding: 8px 15px;
-            transition: color 0.3s, text-shadow 0.3s, transform 0.3s;
+            transition: color 0.3s ease-out, text-shadow 0.3s ease-out, transform 0.3s ease-out; /* ease-out */
         }
 
         #nav-links li a:hover {
@@ -75,38 +87,43 @@
             transform: scale(1.1);
         }
 
+        /* Hamburger Menu Icon */
         .hamburger-menu {
-            display: none;
+            display: none; /* Hidden by default, shown in media query */
             flex-direction: column;
             cursor: pointer;
+            padding: 10px;
+            z-index: 1002;
+            position: relative;
         }
 
         .hamburger-menu div {
             width: 25px;
             height: 3px;
-            margin: 5px 0;
+            margin: 4px 0;
             background-color: #000;
+            transition: background-color 0.3s ease-out; /* ease-out */
         }
 
+        /* --- Mobile Navigation Panel --- */
         .mobile-nav {
-            display: none;
+            display: flex;
             position: fixed;
-            top: 0;
-            right: -100%;
+            top: -100vh;
+            left: 0;
             background-color: rgba(255, 255, 255, 0.95);
             width: 100%;
-            height: 100vh;
+            height: calc(100vh - 60px);
             flex-direction: column;
             justify-content: center;
             align-items: center;
             gap: 30px;
-            padding-top: 60px;
-            transition: right 0.3s ease-in-out;
+            transition: top 0.4s ease-in-out; /* Keep ease-in-out for slide */
             z-index: 1001;
         }
 
         .mobile-nav.active {
-            right: 0;
+            top: 60px;
         }
 
         .mobile-nav a {
@@ -114,24 +131,29 @@
             font-size: 1.5rem;
             font-weight: 600;
             text-decoration: none;
-            opacity: 1; /* Ensure they are visible when active */
+            opacity: 1;
+            transition: color 0.3s ease-out, text-shadow 0.3s ease-out, transform 0.3s ease-out; /* ease-out */
         }
 
         .mobile-nav a:hover {
-            color: #00bcd4;
-            text-shadow: 0 0 8px #00bcd4;
-            transform: scale(1.1);
-        }
+             color: #00bcd4;
+             text-shadow: 0 0 8px #00bcd4;
+             transform: scale(1.1);
+         }
 
         /* Introduction Text */
         .intro {
             text-align: center;
-            margin-top: 30px;
+            margin: 30px 20px;
             padding: 30px;
             background-color: #333;
             color: #fff;
             border-radius: 10px;
-            margin-bottom: 30px;
+            line-height: 1.6;
+            /* Animation */
+            opacity: 0; /* Start hidden */
+            animation: fadeInUp 0.6s 0.1s ease-out forwards;
+             /* animation: name duration delay timing-function fill-mode */
         }
 
         .intro h2 {
@@ -155,21 +177,37 @@
         .course-card {
             position: relative;
             background-color: #333;
-            overflow: hidden;
+            overflow: hidden; /* Important for border-radius on image */
             border-radius: 10px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            /* Refined transition for hover */
+            transition: transform 0.3s ease-out, box-shadow 0.3s ease-out;
+             /* Animation */
+            opacity: 0; /* Start hidden */
+            animation: fadeInUp 0.6s ease-out forwards; /* Base animation */
+            /* Stagger the animation start for each card */
         }
+        .courses-container .course-card:nth-child(1) { animation-delay: 0.2s; }
+        .courses-container .course-card:nth-child(2) { animation-delay: 0.3s; }
+        .courses-container .course-card:nth-child(3) { animation-delay: 0.4s; } /* Example */
+        .courses-container .course-card:nth-child(4) { animation-delay: 0.5s; } /* Example */
+         /* Add more if you have more cards */
+
 
         .course-card:hover {
             transform: scale(1.05);
-            box-shadow: 0 8px 12px rgba(0, 0, 0, 0.5), 0 0 10px #00bcd4; /* Added glow */
+            box-shadow: 0 8px 12px rgba(0, 0, 0, 0.5), 0 0 10px #00bcd4;
         }
 
         .course-card img {
+            display: block;
             width: 100%;
             height: auto;
-            transition: filter 0.3s ease;
+            transition: filter 0.3s ease-out; /* Use ease-out */
+        }
+
+        .course-card:hover img {
+             filter: brightness(50%);
         }
 
         .course-card .overlay {
@@ -180,13 +218,14 @@
             bottom: 0;
             background-color: rgba(0, 0, 0, 0.5);
             z-index: 1;
-            transition: background-color 0.3s ease;
+            transition: background-color 0.3s ease-out; /* Use ease-out */
         }
 
         .course-card:hover .overlay {
             background-color: rgba(0, 0, 0, 0.7);
         }
 
+        /* Animate Text Overlay on Hover */
         .course-card .text-overlay {
             position: absolute;
             top: 50%;
@@ -194,31 +233,44 @@
             transform: translate(-50%, -50%);
             text-align: center;
             color: #fff;
-            font-size: 1.5rem;
-            font-weight: 600;
+            width: 90%;
             z-index: 2;
+            /* Animation */
+            opacity: 0; /* Start hidden */
+            transition: opacity 0.4s ease-out; /* Fade in transition */
         }
 
-        .course-card h3 {
-            font-size: 1.2rem;
+        .course-card:hover .text-overlay {
+             opacity: 1; /* Fade in */
+        }
+
+        /* Text styling within the overlay */
+        .text-overlay h3 {
+            font-size: 1.5rem;
             margin-bottom: 10px;
             color: #00bcd4;
+            text-shadow: 1px 1px 3px rgba(0,0,0,0.7);
         }
 
-        .course-card p {
+        .text-overlay p {
             font-size: 1rem;
             color: #f0f0f0;
-            margin-bottom: 20px;
+            margin-bottom: 0;
+            line-height: 1.4;
+            text-shadow: 1px 1px 3px rgba(0,0,0,0.7);
         }
 
+        /* Button Styling (if used) */
         .button {
+            display: inline-block;
+            margin-top: 15px;
             background-color: #00bcd4;
             color: #1f1f1f;
             padding: 10px 25px;
             text-decoration: none;
             border-radius: 8px;
             font-weight: bold;
-            transition: background-color 0.3s, box-shadow 0.3s;
+            transition: background-color 0.3s ease-out, box-shadow 0.3s ease-out; /* ease-out */
         }
 
         .button:hover {
@@ -228,40 +280,62 @@
 
         footer {
             background-color: #2a2a2a;
-            padding: 15px;
+            padding: 20px;
             text-align: center;
             font-size: 0.9rem;
             color: #aaa;
             width: 100%;
-            position: relative;
-            bottom: 0;
-            margin-top: 30px;
+            margin-top: 40px;
         }
 
-        .course-card:hover img {
-            filter: brightness(70%);
-        }
 
-        /* Media Query for Mobile Screens */
+        /* --- Media Queries --- */
         @media (max-width: 768px) {
             nav {
-                justify-content: space-between;
+                padding: 0 10px;
             }
 
             .nav-container {
-                justify-content: space-between;
+                 justify-content: flex-end; /* Push hamburger right */
+                 /* If you add a logo, change this back to space-between */
             }
 
             #nav-links {
-                display: none;
+                display: none; /* Hide desktop links */
             }
 
             .hamburger-menu {
-                display: flex;
+                display: flex; /* Show hamburger menu */
+            }
+
+             .intro h2 {
+                font-size: 1.8rem;
+            }
+             .intro p {
+                font-size: 1rem;
+            }
+             /* Disable entry animations on mobile if they feel too heavy */
+             /*
+             .intro, .course-card {
+                 animation: none;
+                 opacity: 1;
+             }
+             */
+
+            .courses-container {
+                grid-template-columns: 1fr; /* Stack cards */
+                padding: 15px;
+                 gap: 15px;
+            }
+
+            .text-overlay h3 {
+                font-size: 1.3rem;
+            }
+             .text-overlay p {
+                font-size: 0.9rem;
             }
         }
 
-        /* Media Query for Larger Screens */
         @media (min-width: 769px) {
             .hamburger-menu {
                 display: none;
@@ -273,11 +347,6 @@
 <body>
     <nav>
         <div class="nav-container">
-            <div class="hamburger-menu" id="hamburger-menu" onclick="toggleMenu()">
-                <div></div>
-                <div></div>
-                <div></div>
-            </div>
             <ul id="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Me</a></li>
@@ -285,6 +354,11 @@
                 <li><a href="achievements.html">Achievements</a></li>
                 <li><a href="projects.html">Personal Projects</a></li>
             </ul>
+            <div class="hamburger-menu" id="hamburger-menu" onclick="toggleMenu()">
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
         </div>
     </nav>
 
@@ -304,26 +378,27 @@
 
     <div class="courses-container">
         <div class="course-card">
-            <img src="course1.jpg" alt="Humanities Course Image">
-            <div class="overlay"></div>
+            <img src="course1.jpg" alt="Humanities Course Image"> <div class="overlay"></div>
             <div class="text-overlay">
-                <div>
-                    <h3>Humanities (HU)</h3>
-                    <p>Study philosophy, literature, and art in human history.</p>
-                </div>
+                 <h3>Humanities (HU)</h3>
+                 <p>Study philosophy, literature, and art in human history.</p>
             </div>
         </div>
         <div class="course-card">
-            <img src="course2.jpg" alt="Fine Arts Course Image">
-            <div class="overlay"></div>
+            <img src="course2.jpg" alt="Fine Arts Course Image"> <div class="overlay"></div>
             <div class="text-overlay">
-                <div>
-                    <h3>Fine Arts (FA)</h3>
-                    <p>Explore artistic expression and its impact on culture.</p>
-                </div>
+                 <h3>Fine Arts (FA)</h3>
+                 <p>Explore artistic expression and its impact on culture.</p>
             </div>
         </div>
+         <div class="course-card">
+            <img src="course3.jpg" alt="Another Course Image"> <div class="overlay"></div>
+            <div class="text-overlay">
+                 <h3>Example Course (EX)</h3>
+                 <p>This is another course description.</p>
+            </div>
         </div>
+    </div>
 
     <footer>
         <p>© 2025 Jesús Lopez Aguilar | All rights reserved</p>
@@ -333,8 +408,30 @@
         function toggleMenu() {
             const mobileNav = document.getElementById('mobile-nav');
             mobileNav.classList.toggle('active');
+            // Optional: Prevent body scroll when menu is open
+            document.body.classList.toggle('no-scroll');
         }
+
+        // Optional: Close mobile menu if a link is clicked
+        document.querySelectorAll('.mobile-nav a').forEach(link => {
+            link.addEventListener('click', () => {
+                const mobileNav = document.getElementById('mobile-nav');
+                if (mobileNav.classList.contains('active')) {
+                    mobileNav.classList.remove('active');
+                    document.body.classList.remove('no-scroll');
+                }
+            });
+        });
+
+        // Optional: Add CSS for body.no-scroll
+        /*
+        In your <style> block:
+        body.no-scroll {
+            overflow: hidden;
+             position: fixed; /* Alternative method to prevent scroll */
+             width: 100%;    /* Required with position: fixed */
+        }
+        */
     </script>
 </body>
-
 </html>
