--- a/courses.html
+++ b/courses.html
@@ -8,7 +8,6 @@
     <title>Courses - Jesús Lopez Aguilar</title>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap" rel="stylesheet">
 
-
     <style>
         * {
             margin: 0;
@@ -20,11 +19,11 @@
         @keyframes fadeInUp {
             from {
                 opacity: 0;
-                transform: translateY(20px); /* Start slightly lower */
+                transform: translateY(20px);
             }
             to {
                 opacity: 1;
-                transform: translateY(0); /* End at normal position */
+                transform: translateY(0);
             }
         }
 
@@ -33,8 +32,14 @@
             font-family: 'Nunito', sans-serif;
             color: #f0f0f0;
             overflow-x: hidden;
-            padding-top: 60px; /* Account for fixed navbar */
+            padding-top: 60px;
         }
+        /* Optional: Body scroll lock style (if re-enabled in JS) */
+        /*
+        body.no-scroll {
+            overflow: hidden;
+        }
+        */
 
         /* Navbar */
         nav {
@@ -54,7 +59,8 @@
 
         .nav-container {
             display: flex;
-            justify-content: space-between;
+            /* justify-content: space-between; /* Replaced */
+            justify-content: center; /* Center items horizontally by default (for desktop links) */
             align-items: center;
             width: 100%;
             max-width: 1200px;
@@ -62,7 +68,7 @@
 
         #nav-links {
             list-style: none;
-            display: flex;
+            display: flex; /* Hidden on mobile via media query */
             gap: 20px;
             margin: 0;
             padding: 0;
@@ -78,7 +84,7 @@
             font-size: 1.2rem;
             font-weight: 600;
             padding: 8px 15px;
-            transition: color 0.3s ease-out, text-shadow 0.3s ease-out, transform 0.3s ease-out; /* ease-out */
+            transition: color 0.3s ease-out, text-shadow 0.3s ease-out, transform 0.3s ease-out;
         }
 
         #nav-links li a:hover {
@@ -102,28 +108,28 @@
             height: 3px;
             margin: 4px 0;
             background-color: #000;
-            transition: background-color 0.3s ease-out; /* ease-out */
+            transition: background-color 0.3s ease-out;
         }
 
         /* --- Mobile Navigation Panel --- */
         .mobile-nav {
             display: flex;
             position: fixed;
-            top: -100vh;
+            top: -100vh; /* Start off-screen */
             left: 0;
-            background-color: rgba(255, 255, 255, 0.95);
+            background-color: rgba(255, 255, 255, 0.97); /* Slightly less transparent */
             width: 100%;
             height: calc(100vh - 60px);
             flex-direction: column;
             justify-content: center;
             align-items: center;
             gap: 30px;
-            transition: top 0.4s ease-in-out; /* Keep ease-in-out for slide */
+            transition: top 0.4s ease-in-out;
             z-index: 1001;
         }
 
         .mobile-nav.active {
-            top: 60px;
+            top: 60px; /* Slide down to below navbar */
         }
 
         .mobile-nav a {
@@ -132,7 +138,7 @@
             font-weight: 600;
             text-decoration: none;
             opacity: 1;
-            transition: color 0.3s ease-out, text-shadow 0.3s ease-out, transform 0.3s ease-out; /* ease-out */
+            transition: color 0.3s ease-out, text-shadow 0.3s ease-out, transform 0.3s ease-out;
         }
 
         .mobile-nav a:hover {
@@ -153,7 +159,6 @@
             /* Animation */
             opacity: 0; /* Start hidden */
             animation: fadeInUp 0.6s 0.1s ease-out forwards;
-             /* animation: name duration delay timing-function fill-mode */
         }
 
         .intro h2 {
@@ -177,21 +182,19 @@
         .course-card {
             position: relative;
             background-color: #333;
-            overflow: hidden; /* Important for border-radius on image */
+            overflow: hidden;
             border-radius: 10px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
-            /* Refined transition for hover */
             transition: transform 0.3s ease-out, box-shadow 0.3s ease-out;
-             /* Animation */
+            /* Animation */
             opacity: 0; /* Start hidden */
-            animation: fadeInUp 0.6s ease-out forwards; /* Base animation */
-            /* Stagger the animation start for each card */
+            animation: fadeInUp 0.6s ease-out forwards;
         }
         .courses-container .course-card:nth-child(1) { animation-delay: 0.2s; }
         .courses-container .course-card:nth-child(2) { animation-delay: 0.3s; }
-        .courses-container .course-card:nth-child(3) { animation-delay: 0.4s; } /* Example */
-        .courses-container .course-card:nth-child(4) { animation-delay: 0.5s; } /* Example */
-         /* Add more if you have more cards */
+        .courses-container .course-card:nth-child(3) { animation-delay: 0.4s; }
+        .courses-container .course-card:nth-child(4) { animation-delay: 0.5s; }
+         /* Add more delays if needed */
 
 
         .course-card:hover {
@@ -203,7 +206,7 @@
             display: block;
             width: 100%;
             height: auto;
-            transition: filter 0.3s ease-out; /* Use ease-out */
+            transition: filter 0.3s ease-out;
         }
 
         .course-card:hover img {
@@ -218,14 +221,14 @@
             bottom: 0;
             background-color: rgba(0, 0, 0, 0.5);
             z-index: 1;
-            transition: background-color 0.3s ease-out; /* Use ease-out */
+            transition: background-color 0.3s ease-out;
         }
 
         .course-card:hover .overlay {
             background-color: rgba(0, 0, 0, 0.7);
         }
 
-        /* Animate Text Overlay on Hover */
+        /* Text Overlay - Now always visible */
         .course-card .text-overlay {
             position: absolute;
             top: 50%;
@@ -235,13 +238,8 @@
             color: #fff;
             width: 90%;
             z-index: 2;
-            /* Animation */
-            opacity: 0; /* Start hidden */
-            transition: opacity 0.4s ease-out; /* Fade in transition */
-        }
-
-        .course-card:hover .text-overlay {
-             opacity: 1; /* Fade in */
+            /* Opacity rules removed - text is always visible */
+            /* transition: opacity 0.4s ease-out; /* Removed opacity transition */
         }
 
         /* Text styling within the overlay */
@@ -270,7 +268,7 @@
             text-decoration: none;
             border-radius: 8px;
             font-weight: bold;
-            transition: background-color 0.3s ease-out, box-shadow 0.3s ease-out; /* ease-out */
+            transition: background-color 0.3s ease-out, box-shadow 0.3s ease-out;
         }
 
         .button:hover {
@@ -296,8 +294,7 @@
             }
 
             .nav-container {
-                 justify-content: flex-end; /* Push hamburger right */
-                 /* If you add a logo, change this back to space-between */
+                 justify-content: flex-end; /* Push hamburger to the right on mobile */
             }
 
             #nav-links {
@@ -314,13 +311,6 @@
              .intro p {
                 font-size: 1rem;
             }
-             /* Disable entry animations on mobile if they feel too heavy */
-             /*
-             .intro, .course-card {
-                 animation: none;
-                 opacity: 1;
-             }
-             */
 
             .courses-container {
                 grid-template-columns: 1fr; /* Stack cards */
@@ -406,32 +396,28 @@
 
     <script>
         function toggleMenu() {
+            // --- Temporary Test ---
+             alert('Hamburger clicked!'); // Add this line for testing. REMOVE IT after confirming the click works.
+            // --- End Temporary Test ---
+
             const mobileNav = document.getElementById('mobile-nav');
             mobileNav.classList.toggle('active');
-            // Optional: Prevent body scroll when menu is open
-            document.body.classList.toggle('no-scroll');
+
+            // Temporarily commented out optional body scroll lock
+            // document.body.classList.toggle('no-scroll');
         }
 
-        // Optional: Close mobile menu if a link is clicked
+        // Optional: Close mobile menu if a link is clicked - Keep this part
         document.querySelectorAll('.mobile-nav a').forEach(link => {
             link.addEventListener('click', () => {
                 const mobileNav = document.getElementById('mobile-nav');
                 if (mobileNav.classList.contains('active')) {
                     mobileNav.classList.remove('active');
-                    document.body.classList.remove('no-scroll');
+                    // Also remove scroll lock if it was active
+                    // document.body.classList.remove('no-scroll');
                 }
             });
         });
-
-        // Optional: Add CSS for body.no-scroll
-        /*
-        In your <style> block:
-        body.no-scroll {
-            overflow: hidden;
-             position: fixed; /* Alternative method to prevent scroll */
-             width: 100%;    /* Required with position: fixed */
-        }
-        */
     </script>
 </body>
 </html>
